# quickicon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cli.js  index.d.ts  index.js  install.ps1  install.sh  installation.md  package.json  update.sh
.github/workflows/: npm-publish.yml  release.yml
public/assets/icon/: FishIcon.tsx  MessageIcon.tsx
src/: args.rs  asset.rs  content.rs  convert.rs  default.rs  lib.rs  main.rs  parser.rs
