[package]
name = "quickicon"
version = "0.1.0"
edition = "2021"
authors = ["Fola azeezabass2005@gmail.com"]
description = "Convert SVGs to React components instantly from clipboard, files, or URLs"
license = "MIT"
repository = "https://github.com/azeezabass2005/quickicon"
keywords = ["svg", "react", "cli", "component", "icon"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "quickicon"
path = "src/main.rs"

[lib]
name = "quickicon"
crate-type = ["cdylib", "lib"]


[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
arboard = "3.6.1"
regex = "1.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.12.0"
napi = { version = "3.3.0", features = ["async"], optional = true }
napi-derive = { version = "3.2.5", optional = true }


[build-dependencies]
napi-build = { version = "2.2.3", optional = true }


[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[profile.release]
lto = true
codegen-units = 1
strip = true